# welovedogs

./: .gitignore  DONATION_CONTRACT_SETUP.md  DONATION_FEATURE.md  DONATION_TRACKING_VERIFICATION.md  GETTING_STARTED.md  README.md  package-lock.json  package.json  turbo.json
apps/backend/: README.md  SUPABASE_SETUP.md  package.json
apps/web/: .env.example  CONTRACTS_GUIDE.md  DEPLOYMENT_CHECK.md  NFT_SETUP.md  README.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CreateEscrowModal.tsx  DonationButton.tsx  DonationModal.tsx  DonationStats.tsx  Navbar.tsx  Providers.tsx  WalletMenu.tsx  about-hero.tsx  about-technology.tsx  care-provider-cards.tsx  care-providers-hero.tsx  caretakers-banner.tsx  dog-card.tsx  dog-cards.tsx  donation-modal.tsx  donation-story.tsx  donation-success-modal.tsx  header.tsx  hero.tsx  lober-final.tsx  sticky-donation-widget.tsx  we-dogs-logo.tsx
apps/web/contexts/: SorobanContext.tsx  SupabaseContext.tsx  TrustlessWorkContext.tsx  WalletsKitContext.tsx
apps/web/hooks/: useCampaignBalances.ts  useDonation.ts  useDonationNFT.ts  useEscrow.ts  usePodPoap.ts  useSoroban.ts  useStellarAccount.ts  useSupabase.ts  useSupabaseAuth.ts  useSupabaseProfile.ts  useSupabaseRealtime.ts  useSupabaseStorage.ts  useWalletsKit.ts
apps/web/lib/: config.ts  parse-story.ts
apps/web/lib/utils/: ipfs.ts  (+11 more)
contracts/: Cargo.toml  README.md  package.json
contracts/contracts/pod-poap/: Cargo.toml  README.md
contracts/contracts/pod-poap/src/: lib.rs
(+113 files in other folders)
